# portaone-autodialer

./: .gitignore  cloud-backend.sh  cloud-frontend.sh  start-backend.sh  start-celery.sh  start-frontend.sh
.github/: copilot-instructions.md
backend/: .env.example  pyproject.toml
backend/autodialer/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
backend/autodialer/migrations/: 0001_initial.py
backend/autodialer/services/: __init__.py  external_api.py  webhook_logs.py  workflows.py
backend/core/: celery.py  settings.py  urls.py
frontend/: next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(app)/: layout.tsx  loading.tsx
frontend/app/(app)/audio/: page.tsx
frontend/app/(app)/campaigns/: page.tsx
frontend/app/(app)/contacts/: page.tsx
frontend/app/(app)/dashboard/: page.tsx
frontend/app/api/auth/change-password/: route.ts
frontend/app/api/auth/login/: route.ts
frontend/app/api/auth/logout/: route.ts
frontend/components/: providers.tsx  session-bootstrap.tsx
frontend/components/app/: sidebar-nav.tsx
frontend/components/audio/: campaign-audio-page-client.tsx
frontend/components/auth/: login-screen.tsx  logout-button.tsx
frontend/components/campaigns/: campaigns-page-client.tsx
frontend/components/contacts/: contacts-page-client.tsx
frontend/components/ui/: dialog.tsx
frontend/lib/: client-api.ts  env.ts  server-api.ts  session.ts  time.ts
frontend/public/: contact-import-template.csv
frontend/stores/: app-store.ts
(+3 files in other folders)
